--- a/notebooks/learning_skill/01_preprocessing.ipynb
+++ b/notebooks/learning_skill/01_preprocessing.ipynb
@@ -7,9 +7,8 @@
     "cell_id": "91ada1c3-96a0-4022-82ad-15fc2933bc1c",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "9aa7b83e",
-    "execution_start": 1648412528810,
-    "execution_millis": 1691,
-    "owner_user_id": "62e199ca-01f6-4bbc-8362-fc86c29586af",
+    "execution_start": 1650469739700,
+    "execution_millis": 990,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 189
    },
@@ -34,8 +33,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "d22c30ae",
-    "execution_start": 1648412530532,
-    "execution_millis": 1910,
+    "execution_start": 1650469740695,
+    "execution_millis": 1661,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
@@ -50,8 +49,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "f804c160",
-    "execution_start": 1648412532443,
-    "execution_millis": 364,
+    "execution_start": 1650469742364,
+    "execution_millis": 402,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 600
    },
@@ -254,8 +253,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "e8a874f9",
-    "execution_start": 1648412532803,
-    "execution_millis": 807,
+    "execution_start": 1650469742750,
+    "execution_millis": 463,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 135
    },
@@ -270,8 +269,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "85adf71c",
-    "execution_start": 1648412533711,
-    "execution_millis": 832,
+    "execution_start": 1650469743219,
+    "execution_millis": 546,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 135
    },
@@ -286,8 +285,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "b2ad309a",
-    "execution_start": 1648412534583,
-    "execution_millis": 51,
+    "execution_start": 1650469743765,
+    "execution_millis": 17,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 99
    },
@@ -302,8 +301,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "cf9ece89",
-    "execution_start": 1648412534635,
-    "execution_millis": 11,
+    "execution_start": 1650469743787,
+    "execution_millis": 84,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 118.1875,
     "deepnote_output_heights": [
@@ -330,8 +329,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "f804c160",
-    "execution_start": 1648412534678,
-    "execution_millis": 169,
+    "execution_start": 1650469743813,
+    "execution_millis": 506,
     "deepnote_table_state": {
      "pageSize": 10,
      "pageIndex": 1,
@@ -531,8 +530,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "7426e0d3",
-    "execution_start": 1648412534892,
-    "execution_millis": 12055,
+    "execution_start": 1650469743937,
+    "execution_millis": 6922,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
@@ -547,8 +546,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "3441705e",
-    "execution_start": 1648412546963,
-    "execution_millis": 31,
+    "execution_start": 1650469750859,
+    "execution_millis": 6,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 99
    },
@@ -563,8 +562,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "585bd663",
-    "execution_start": 1648412547018,
-    "execution_millis": 146,
+    "execution_start": 1650469750865,
+    "execution_millis": 110,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 251.3125,
     "deepnote_output_heights": [
@@ -591,8 +590,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "4dea2789",
-    "execution_start": 1648412547178,
-    "execution_millis": 45,
+    "execution_start": 1650469750962,
+    "execution_millis": 31,
     "deepnote_table_state": {
      "pageSize": 10,
      "pageIndex": 0,
@@ -680,8 +679,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "48287ed4",
-    "execution_start": 1648412547230,
-    "execution_millis": 947,
+    "execution_start": 1650469750978,
+    "execution_millis": 556,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
@@ -706,8 +705,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "939f0717",
-    "execution_start": 1648412548184,
-    "execution_millis": 25,
+    "execution_start": 1650469751534,
+    "execution_millis": 9,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
@@ -722,8 +721,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "deb4fa5f",
-    "execution_start": 1648412548214,
-    "execution_millis": 14660,
+    "execution_start": 1650469751558,
+    "execution_millis": 9515,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 118.1875,
     "deepnote_output_heights": [
@@ -750,8 +749,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "1601d12f",
-    "execution_start": 1648412562894,
-    "execution_millis": 540,
+    "execution_start": 1650469761081,
+    "execution_millis": 435,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
@@ -766,8 +765,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "67033922",
-    "execution_start": 1648412563453,
-    "execution_millis": 936,
+    "execution_start": 1650469761670,
+    "execution_millis": 355,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
@@ -777,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": "# Otros modelos",
+   "source": "# Otros modelos (Modelo seleccionado)",
    "metadata": {
     "cell_id": "06b44fd29e6342ab9683eef33e08c4c3",
     "tags": [],
@@ -792,8 +791,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "f3909c3c",
-    "execution_start": 1648412564409,
-    "execution_millis": 23,
+    "execution_start": 1650469762055,
+    "execution_millis": 2057197637,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
@@ -808,8 +807,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "c4154386",
-    "execution_start": 1648412564464,
-    "execution_millis": 3926,
+    "execution_start": 1650469762078,
+    "execution_millis": 1886,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
@@ -824,8 +823,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "d0902e71",
-    "execution_start": 1648412568402,
-    "execution_millis": 974,
+    "execution_start": 1650469763984,
+    "execution_millis": 463,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 118.1875,
     "deepnote_output_heights": [
@@ -848,12 +847,41 @@
   {
    "cell_type": "code",
    "metadata": {
+    "cell_id": "b7b9ad782ae94b4692fc27f031fa5141",
+    "tags": [],
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "ffccfeb5",
+    "execution_start": 1650469849774,
+    "execution_millis": 926,
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 118.1875,
+    "deepnote_output_heights": [
+     21.1875
+    ]
+   },
+   "source": "f\"Score: {round(tree_model.score(x, y) * 100, 2)}%\"",
+   "execution_count": null,
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "execution_count": 26,
+     "data": {
+      "text/plain": "'Score: 98.28%'"
+     },
+     "metadata": {}
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
     "cell_id": "81c1270e765b4e638f30222c33ed5a69",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "af9f014e",
-    "execution_start": 1648412569433,
-    "execution_millis": 254765,
+    "execution_start": 1650469764462,
+    "execution_millis": 38,
+    "owner_user_id": "62e199ca-01f6-4bbc-8362-fc86c29586af",
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 118.1875,
     "deepnote_output_heights": [
@@ -879,13 +907,13 @@
     "cell_id": "593b2725f7c14e68a02e5179aef311d4",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "d4085542",
-    "execution_start": 1648412569500,
-    "execution_millis": 126161,
+    "source_hash": "ba4956d6",
+    "execution_start": 1650469764516,
+    "execution_millis": 16,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "source": "dump(tree_model, open('/work/games_seeker/models/model.pkl', 'wb'))",
+   "source": "# dump(tree_model, open('/work/games_seeker/models/model.pkl', 'wb'))",
    "execution_count": null,
    "outputs": []
   },
@@ -896,7 +924,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "b623e53d",
-    "execution_start": 1648412569548,
+    "execution_start": 1650469764556,
+    "execution_millis": 0,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
