--- a/notebooks/logic_skill/untitled.ipynb
+++ b/notebooks/logic_skill/untitled.ipynb
@@ -23,8 +23,7 @@
     "cell_id": "7df15eae-5fa1-4c48-b7f8-68fa1c270962",
     "tags": [],
     "is_collapsed": false,
-    "deepnote_cell_type": "text-cell-h1",
-    "deepnote_cell_height": 82
+    "deepnote_cell_type": "text-cell-h1"
    }
   },
   {
@@ -81,7 +80,7 @@
     },
     "deepnote_table_loading": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 630
+    "deepnote_cell_height": 632
    },
    "source": "df",
    "execution_count": null,
@@ -490,8 +489,7 @@
     "cell_id": "b0fc79f3-edde-487b-9108-50f77da9954c",
     "tags": [],
     "is_collapsed": false,
-    "deepnote_cell_type": "text-cell-h1",
-    "deepnote_cell_height": 82
+    "deepnote_cell_type": "text-cell-h1"
    }
   },
   {
@@ -504,9 +502,9 @@
     "execution_start": 1647211362631,
     "execution_millis": 11,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 545.25,
+    "deepnote_cell_height": 545,
     "deepnote_output_heights": [
-     232.25
+     232
     ]
    },
    "source": "[\n    f\"superioridad({marca}{n_s}, {marca}{n_i})\"\n    for marca in [\"i\", \"r\"]\n    for n_s in range(9,2, -2)\n    for n_i in range(3, 10, 2)\n    if n_s > n_i\n]\n# for marca in [\"i\", \"r\"]:\n#     for n_s in range(9,2, -2):\n#         for n_i in range(3, 10, 2):\n#             if n_s > n_i:\n#                 print(f\"superioridad({marca}{n_s}, {marca}{n_i})\")\n",
@@ -532,9 +530,9 @@
     "execution_start": 1647211362666,
     "execution_millis": 4,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 118.1875,
+    "deepnote_cell_height": 118,
     "deepnote_output_heights": [
-     21.1875
+     21
     ]
    },
    "source": "list(range(9, 2, -2))",
@@ -560,10 +558,7 @@
     "execution_start": 1647211362667,
     "execution_millis": 1,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 945,
-    "deepnote_output_heights": [
-     78.75
-    ]
+    "deepnote_cell_height": 945
    },
    "source": "def base_conocimiento(data):\n    games_kb = pl.KnowledgeBase(\"games\")\n    facts = []\n\n    # Equivalencia  \n    tmp = [f\"equivale(i{n},r{n})\" for n in range(3,10,2)]\n    tmp += [f\"equivale({marca}{n},{marca}{n})\" for marca in [\"i\", \"r\"] for n in range(3,10,2)]\n    tmp += [f\"equivale({marca}{n},{marca}{n})\" for marca in [\"r\", \"i\"] for n in range(3,10,2)]\n\n    facts += list(set(tmp))\n\n    # Superioridad\n    tmp = [\n        f\"superioridad({marca}{n_s},{marca}{n_i})\"\n        for marca in [\"i\", \"r\"]\n        for n_s in range(9,2, -2)\n        for n_i in range(3, 10, 2)\n        if n_s > n_i\n    ]\n\n    facts += list(set(tmp))\n\n    # Requisitos minimos\n    for game in df.values:\n        tmp = []\n        for cpu in game[3]:\n            for gpu in game[5]:\n                tmp.append(f\"requerimiento({game[0]},{game[2]},{cpu},{game[4]},{gpu},{game[6]})\")\n        facts += list(set(tmp))\n\n    \n    # Reglas\n    facts.append(\"valSO(X,Y) :- X >= Y\")\n    facts.append(\"valRAM(X,Y) :- X >= Y\")\n    facts.append(\"valStorage(X,Y) :- X >= Y\")\n    facts.append(\"valGPU(X,Y) :- X >= Y\")\n    \n    facts.append(\"superior(X,Y) :- equivale(Y,Z),superioridad(X,Z);superioridad(X,Z)\")\n    # facts.append(\"puede_jugar(A,B,C,X,Y,Z) :- requerimiento(A,B,C,X,Y,Z)\")\n    #facts.append(\"puede_jugar(A,B,C,X,Y,Z,B1,C1) :- requerimiento(A,B,C,X,Y,Z);valSO(B,B1),superior(C,C1)\")\n    # facts.append(\"puede_jugar(A,B,C,X,Y,Z,B1,C1,X1,Y1,Z1) :- requerimiento(A,B,C,X,Y,Z);valSO(B,B1), equivale(C,C1), valRAM(X,X1), valGPU(Y,Y1), valStorage(Z, Z1)\")\n    facts.append(\"puede_jugar(NAME,B,C,X,Y,Z) :- requerimiento(NAME,SO,CPU,RAM,GPU,STO)\")\n    facts.append(\"puede_jugar(SO,I_SO,CPU,I_CPU,RAM,I_RAM,GPU,I_GPU,STO,I_STO) :- valSO(SO,I_SO),equivale(CPU,I_CPU),valRAM(RAM,I_RAM),valGPU(GPU,I_GPU),valStorage(STO,I_STO)\")\n    facts.append(\"puede_jugar(SO,I_SO,CPU,I_CPU,RAM,I_RAM,GPU,I_GPU,STO,I_STO) :- valSO(SO,I_SO),superior(CPU,I_CPU),valRAM(RAM,I_RAM),valGPU(GPU,I_GPU),valStorage(STO,I_STO)\")\n\n    games_kb(facts)\n\n    return facts, games_kb\n",
    "execution_count": null,
@@ -595,9 +590,9 @@
     "execution_start": 1647211362673,
     "execution_millis": 7,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 118.1875,
+    "deepnote_cell_height": 118,
     "deepnote_output_heights": [
-     21.1875
+     21
     ]
    },
    "source": "games_kb.query(pl.Expr(\"equivale(r9,r9)\"))",
@@ -623,9 +618,9 @@
     "execution_start": 1647211362699,
     "execution_millis": 6,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 136.1875,
+    "deepnote_cell_height": 136,
     "deepnote_output_heights": [
-     21.1875
+     21
     ]
    },
    "source": "games_kb.query(pl.Expr(\"puede_jugar(Elden Ring,10,i5,12,1060,60)\"))\ngames_kb.query(pl.Expr(\"puede_jugar(11,10,i9,i3,32,16,1650,1050,190,120)\"))",
@@ -651,9 +646,9 @@
     "execution_start": 1647211362707,
     "execution_millis": 4,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 118.1875,
+    "deepnote_cell_height": 118,
     "deepnote_output_heights": [
-     21.1875
+     21
     ]
    },
    "source": "games_kb.query(pl.Expr(\"requerimiento(Elden Ring,B,C,D,E,F,E)\"))",
@@ -679,9 +674,9 @@
     "execution_start": 1647211362765,
     "execution_millis": 15,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 118.1875,
+    "deepnote_cell_height": 118,
     "deepnote_output_heights": [
-     21.1875
+     21
     ]
    },
    "source": "games_kb.query(pl.Expr(\"valSO(5,5)\"))",
