--- a/notebooks/preprocessing/04_pc_types.ipynb
+++ b/notebooks/preprocessing/04_pc_types.ipynb
@@ -9,12 +9,13 @@
     "source_hash": "9a010d68",
     "execution_start": 1648410159786,
     "execution_millis": 3463409,
+    "owner_user_id": "62e199ca-01f6-4bbc-8362-fc86c29586af",
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 135
    },
    "source": "from itertools import product\n\nimport pandas as pd\nimport numpy as np",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -28,7 +29,6 @@
   },
   {
    "cell_type": "code",
-   "source": "def generate_options(type_pc, cpu_range, cpu_gen_range, cpu_series, ram_range, hdd, ssd, gpu_serie=None, gpu_model=None, enable_ti=False, without_gpu=False):\n    cpus = [\n        f\"{cpu}-{gen}-{serie}\"\n        for cpu in range(3,8,2)\n        for gen in range(5,12)\n        for serie in cpu_series\n    ]\n\n    if not without_gpu:\n\n        gpu_without_ti = [\n            f\"{serie}{model}\"\n            for serie in gpu_serie\n            for model in gpu_model    \n        ]\n        gpu_with_ti = []\n        if enable_ti:\n            gpu_with_ti = [f\"{gpu}-TI\" for gpu in gpu_without_ti]\n        gpu = gpu_without_ti + gpu_with_ti\n    else:\n        gpu = [-1]\n\n    ram = list(ram_range)\n\n    return list(product(cpus, ram, gpu, hdd, ssd, [type_pc]))",
    "metadata": {
     "cell_id": "4843de5d798d49f09d193fec82b5194c",
     "tags": [],
@@ -39,8 +39,9 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 513
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "def generate_options(type_pc, cpu_range, cpu_gen_range, cpu_series, ram_range, hdd, ssd, gpu_serie=None, gpu_model=None, enable_ti=False, without_gpu=False):\n    cpus = [\n        f\"{cpu}-{gen}-{serie}\"\n        for cpu in range(3,8,2)\n        for gen in range(5,12)\n        for serie in cpu_series\n    ]\n\n    if not without_gpu:\n\n        gpu_without_ti = [\n            f\"{serie}{model}\"\n            for serie in gpu_serie\n            for model in gpu_model    \n        ]\n        gpu_with_ti = []\n        if enable_ti:\n            gpu_with_ti = [f\"{gpu}-TI\" for gpu in gpu_without_ti]\n        gpu = gpu_without_ti + gpu_with_ti\n    else:\n        gpu = [-1]\n\n    ram = list(ram_range)\n\n    return list(product(cpus, ram, gpu, hdd, ssd, [type_pc]))",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -54,7 +55,6 @@
   },
   {
    "cell_type": "code",
-   "source": "pcs = []",
    "metadata": {
     "cell_id": "aeb2aed25b5048859db5e01069dcdb76",
     "tags": [],
@@ -65,8 +65,9 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "pcs = []",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -80,7 +81,6 @@
   },
   {
    "cell_type": "code",
-   "source": "pcs = [\n    *pcs,\n    *generate_options(\"Ofimatica\", range(3,6,2), range(5,8), [\"Q\", \"B\", \"U\"], range(2, 9), [500, 750, 1024], [0, 128, 256], without_gpu=True)\n]",
    "metadata": {
     "cell_id": "860d6b1b6e4144d99518395c07ebcaa6",
     "tags": [],
@@ -91,8 +91,9 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 135
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "pcs = [\n    *pcs,\n    *generate_options(\"Ofimatica\", range(3,6,2), range(5,8), [\"Q\", \"B\", \"U\"], range(2, 9), [500, 750, 1024], [0, 128, 256], without_gpu=True)\n]",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -106,7 +107,6 @@
   },
   {
    "cell_type": "code",
-   "source": "pcs = [\n    *pcs,\n    *generate_options(\n        \"Gamer\",\n        range(5,10,2),\n        range(8,13),\n        [\"H\", \"Z\"],\n        range(8, 33, 4),\n        [1024*i for i in range(1,5)],\n        [2**i for i in range(7, 11)],\n        [10, 20, 30],\n        [30, 50, 60, 70, 80],\n        True\n    )\n]",
    "metadata": {
     "cell_id": "7746fad72c4f4db1af526e24ce43cb8f",
     "tags": [],
@@ -117,8 +117,9 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 333
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "pcs = [\n    *pcs,\n    *generate_options(\n        \"Gamer\",\n        range(5,10,2),\n        range(8,13),\n        [\"H\", \"Z\"],\n        range(8, 33, 4),\n        [1024*i for i in range(1,5)],\n        [2**i for i in range(7, 11)],\n        [10, 20, 30],\n        [30, 50, 60, 70, 80],\n        True\n    )\n]",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -132,7 +133,6 @@
   },
   {
    "cell_type": "code",
-   "source": "Hpcs = [\n    *pcs,\n    *generate_options(\n        \"Diseño\",\n        range(5,10,2),\n        range(7,13),\n        [\"H\", \"Z\"],\n        range(16, 128, 4),\n        [1024*i for i in range(2,11)],\n        [2**i for i in range(10, 13)],\n        [10, 20, 30],\n        [30, 50, 60, 70, 80],\n        True\n    )\n]",
    "metadata": {
     "cell_id": "78b0bbc419864ea7950c3677f383db1d",
     "tags": [],
@@ -141,13 +141,11 @@
     "execution_start": 1648410159947,
     "execution_millis": 387,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 333,
-    "deepnote_output_heights": [
-     611
-    ]
+    "deepnote_cell_height": 333
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "Hpcs = [\n    *pcs,\n    *generate_options(\n        \"Diseño\",\n        range(5,10,2),\n        range(7,13),\n        [\"H\", \"Z\"],\n        range(16, 128, 4),\n        [1024*i for i in range(2,11)],\n        [2**i for i in range(10, 13)],\n        [10, 20, 30],\n        [30, 50, 60, 70, 80],\n        True\n    )\n]",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -161,7 +159,6 @@
   },
   {
    "cell_type": "code",
-   "source": "df_base = pd.DataFrame(pcs, columns=[\"CPU\", \"RAM\", \"GPU\", \"HDD\", \"SSD\", \"TARGET\"])",
    "metadata": {
     "cell_id": "664ff83dc44247abaa3a9f9d471d65e6",
     "tags": [],
@@ -170,17 +167,14 @@
     "execution_start": 1648410160337,
     "execution_millis": 3151,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 81,
-    "deepnote_output_heights": [
-     611
-    ]
+    "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "df_base = pd.DataFrame(pcs, columns=[\"CPU\", \"RAM\", \"GPU\", \"HDD\", \"SSD\", \"TARGET\"])",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "df = df_base.copy(deep=True)",
    "metadata": {
     "cell_id": "80f0606a255046909e3f328ef3319b4d",
     "tags": [],
@@ -191,12 +185,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "df = df_base.copy(deep=True)",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "df[\"CPU_GEN\"] = df[\"CPU\"].apply(lambda cpu: cpu.split(\"-\")[1])\ndf[\"CPU_SERIE\"] = df[\"CPU\"].apply(lambda cpu: cpu.split(\"-\")[-1])\ndf[\"CPU\"] = df[\"CPU\"].apply(lambda cpu: cpu.split(\"-\")[0])",
    "metadata": {
     "cell_id": "8d1be303acd94fb8a7c664d352fde234",
     "tags": [],
@@ -205,17 +199,14 @@
     "execution_start": 1648410163653,
     "execution_millis": 3517,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 117,
-    "deepnote_output_heights": [
-     232.25
-    ]
+    "deepnote_cell_height": 117
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "df[\"CPU_GEN\"] = df[\"CPU\"].apply(lambda cpu: cpu.split(\"-\")[1])\ndf[\"CPU_SERIE\"] = df[\"CPU\"].apply(lambda cpu: cpu.split(\"-\")[-1])\ndf[\"CPU\"] = df[\"CPU\"].apply(lambda cpu: cpu.split(\"-\")[0])",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "df[\"GPU_TI\"] = df[\"GPU\"].apply(lambda gpu: 1 if \"TI\" in str(gpu) else 0)\ndf[\"GPU\"] = df[\"GPU\"].apply(lambda gpu: int(gpu) if str(gpu).isnumeric() or gpu == -1 else int(gpu.split(\"-\")[0]))",
    "metadata": {
     "cell_id": "c100b94a858c447ebb97b111f3394de4",
     "tags": [],
@@ -224,17 +215,14 @@
     "execution_start": 1648410167206,
     "execution_millis": 5251,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 99,
-    "deepnote_output_heights": [
-     97.9375
-    ]
+    "deepnote_cell_height": 99
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "df[\"GPU_TI\"] = df[\"GPU\"].apply(lambda gpu: 1 if \"TI\" in str(gpu) else 0)\ndf[\"GPU\"] = df[\"GPU\"].apply(lambda gpu: int(gpu) if str(gpu).isnumeric() or gpu == -1 else int(gpu.split(\"-\")[0]))",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "COLUMNS_ORDER = [\"CPU\", \"CPU_GEN\", \"CPU_SERIE\", \"RAM\", \"GPU\", \"GPU_TI\", \"HDD\", \"SSD\", \"TARGET\"]",
    "metadata": {
     "cell_id": "3e79dbbfedcb44c98ec2f2f31586ccfd",
     "tags": [],
@@ -245,12 +233,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "COLUMNS_ORDER = [\"CPU\", \"CPU_GEN\", \"CPU_SERIE\", \"RAM\", \"GPU\", \"GPU_TI\", \"HDD\", \"SSD\", \"TARGET\"]",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "df = df[COLUMNS_ORDER]",
    "metadata": {
     "cell_id": "381e2853704e4e50b466552b156d5090",
     "tags": [],
@@ -266,17 +254,14 @@
     },
     "deepnote_table_loading": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 81,
-    "deepnote_output_heights": [
-     21.1875
-    ]
+    "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "df = df[COLUMNS_ORDER]",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "df",
    "metadata": {
     "cell_id": "1aaca8c808bd41c3bea611296bcf2b38",
     "tags": [],
@@ -285,8 +270,10 @@
     "execution_start": 1648410172937,
     "execution_millis": 508,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 635
+    "deepnote_cell_height": 600
    },
+   "source": "df",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -465,12 +452,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "source": "df.to_csv(\"/work/games_seeker/data/interim/types_of_pc.csv\", sep=\"|\", index=False)",
    "metadata": {
     "cell_id": "8610ebd5fc444e3e800822058a26e2fa",
     "tags": [],
@@ -481,12 +466,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "df.to_csv(\"/work/games_seeker/data/interim/types_of_pc.csv\", sep=\"|\", index=False)",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "",
    "metadata": {
     "cell_id": "881c15d856a4422f81792b6420320240",
     "tags": [],
@@ -497,8 +482,9 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
